feat route get /users and get /users/:id and doc updated
